--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Times New Roman', 'sans-serif';
 }
 
 
