coloco un background de la imagen de fondo

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ header{
     width: 100%;
     height: 500pt;
     position: relative;
+    background-image: url(../imagenes/solo-leveling.jpg);
 }
 
 
