coloco un background de la pasision en el centro

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ header{
     height: 500pt;
     position: relative;
     background-image: url(../imagenes/solo-leveling.jpg);
+    background-position: center;
 }
 
 
