--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header{
     position: relative;
     background-image: url(../imagenes/solo-leveling.jpg);
     background-position: center;
+    background-size: cover;
 }
 
 
