coloco un background de la repeat en no repeat

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ header{
     background-image: url(../imagenes/solo-leveling.jpg);
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
