--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ article{
     padding-bottom: 40px;
     box-shadow: -10px 0 20px -30px black;
     border-radius: 6px;
+    position: relative;
 }
 
 
