--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ article{
     box-shadow: -10px 0 20px -30px black;
     border-radius: 6px;
     position: relative;
+    overflow: hidden;
 }
 
 
