--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header{
     left: 0;
     width: 100%;
     height: 80px;
-    background-color: crimson;
+    background-color: whitesmoke;
     box-shadow: 0 4px 25px -22px black;
     z-index: 2;
 }
